# bitbit-de-but-be-dev

./: .gitignore  AGENTS.md  CLAUDE.md
auth/hydra/: .env.example  CLAUDE.md  docker-compose.yml
cache/memorystore/: .env.example  .gitignore  Dockerfile  README.md  README_LOCAL.md  index.ts  main.tf  package.json  test-env.ts  tsconfig.json
cache/redis-demo/: Dockerfile  README.md  docker-compose.yml  init.sql  package.json  redis.conf
db/pg-materialized-view-test/: setup.fish
db/spanner-atlass-schema/: .env.example  .gitignore  COMPARISON.md  README.md  SCHEMA_SOURCES.md  WORKFLOW.md  atlas-hcl.hcl  atlas.hcl  package.json
elasticsearch/: .env.example  README.md  docker-compose.simple.yml  docker-compose.yml  how-to-use.md  package-lock.json  package.json
elasticsearch/docs/: README.md  elasticsearch-index-vs-rdbms.md
go/generics/: README.md  go.mod  main.go
go/go-to-zod/: DOCS.md  README.md  go.mod  go.sum  package-lock.json  package.json  ts-to-zod.config.js  tygo.yaml
graphiql/: README.md  package-lock.json  package.json  tsconfig.json
haskell/frist-trial/: .gitignore  CLAUDE.md  README.md  cabal.project  todo-cli.cabal
haskell/frist-trial/src/: Main.hs
haskell/frist-trial/src/Todo/: Commands.hs  Storage.hs  Types.hs
haskell/frist-trial/test/: Spec.hs
haskell/frist-trial/test/Todo/: TypesSpec.hs
mcp-mock/: README.md  package-lock.json  package.json  prompt-results.md  tsconfig.json
n8n/: docker-compose.yml
nix/: FLAKE_NOTES.md  NIX_GOTCHAS.md  README.md  flake.nix  hello.js  shell.nix
競プロ/: .gitignore  Dockerfile  LICENSE  README.md
(+265 files in other folders)
