cabal-version:      3.0
name:               todo-cli
version:            0.1.0.0
synopsis:           A simple CLI todo application for learning Haskell
description:        Educational project covering ADTs, type classes, monads, and more.
license:            MIT
author:             Your Name
build-type:         Simple

executable todo-cli
    main-is:          Main.hs
    other-modules:    Todo.Types
                    , Todo.Storage
                    , Todo.Commands
    build-depends:    base ^>=4.17 || ^>=4.18 || ^>=4.19
                    , aeson >= 2.0
                    , bytestring
                    , text
                    , time
                    , directory
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat

test-suite todo-cli-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Todo.TypesSpec
    build-depends:    base
                    , todo-cli
                    , hspec >= 2.0
    hs-source-dirs:   test
    default-language: Haskell2010
